# chatterbox-vllm2

./: .dockerignore  API_USAGE.md  Dockerfile  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MULTILINGUAL_VERIFICATION.md  QUICKSTART.md  README.md  ULTRA_LOW_VRAM.md  VERIFICATION_SUMMARY.md  api_server.py  chatterbox-tts.service.example  docker-compose.yml  example-api-client.py  example-tts-ultra-low-vram.py  pyproject.toml  start-api-server.sh  test_api.py  test_quantization.py
docs/: ALIGNMENT_ANALYZER.md  IMPLEMENTATION_SUMMARY.md  POSITIONAL_EMBEDDINGS.md
src/chatterbox_vllm/: quantization.py  text_utils.py  tts.py
src/chatterbox_vllm/models/s3gen/: s3gen.py
src/chatterbox_vllm/models/t3/: mtltokenizer.py  t3.py
src/chatterbox_vllm/models/t3/inference/: __init__.py  alignment_stream_analyzer.py
src/chatterbox_vllm/models/t3/modules/: t3_config.py
